Fixed bug where game code would sometimes wrap
This is because it would fill it's colum with certain wider letter. The
fix is just to reduce the margin a bit so should always fit.

--- a/client/css/lobby.css
+++ b/client/css/lobby.css
@@ -34,7 +34,7 @@ div, button, input {
     justify-self: start;
     align-self: center;
     margin-top: 4%;
-    margin-left: 14%;
+    margin-left: 10%;
     color: #784421;
     text-shadow: 4px 4px black;
     letter-spacing: 0.05em;
